version/0.17/_sources/api/solver/_autosummary/settings/lift.rst.txt
:orphan:

.. _lift:

lift
====

.. autoclass:: ansys.fluent.core.solver.settings_232.lift.lift
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`force_child <force_child>`


.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`report_definitions <report_definitions>`       'report_definitions' child.

==============================================   ===============================

